refactor: implementa ResourceNotFoundException e melhora GlobalExceptionHandler